# psflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ignore.conf  justfile
.claude/: ergon.json
.playwright-mcp/: page-2026-03-31T20-59-42-538Z.yml  page-2026-03-31T21-04-21-642Z.yml  page-2026-03-31T21-04-43-831Z.yml  page-2026-03-31T21-06-12-905Z.yml  page-2026-03-31T21-06-22-198Z.yml  page-2026-03-31T21-06-51-556Z.yml  page-2026-03-31T21-31-45-974Z.yml  page-2026-03-31T21-32-27-644Z.yml  page-2026-03-31T21-36-36-440Z.yml  page-2026-03-31T21-36-44-484Z.yml  page-2026-03-31T21-51-34-555Z.yml  page-2026-03-31T21-51-55-328Z.yml  page-2026-03-31T22-01-22-465Z.yml  page-2026-03-31T22-01-34-851Z.yml  page-2026-04-01T01-07-15-554Z.yml  page-2026-04-01T01-07-42-407Z.yml  page-2026-04-01T01-08-09-974Z.yml  page-2026-04-01T01-08-22-746Z.yml  page-2026-04-01T11-35-22-040Z.yml  page-2026-04-01T11-36-34-314Z.yml  page-2026-04-01T11-36-56-809Z.yml  page-2026-04-01T11-37-31-716Z.yml  page-2026-04-01T11-37-55-960Z.yml  page-2026-04-01T11-38-06-636Z.yml  page-2026-04-01T11-39-12-576Z.yml  page-2026-04-01T11-55-33-911Z.yml  page-2026-04-01T12-04-53-446Z.yml  page-2026-04-01T12-08-17-489Z.yml  page-2026-04-01T12-25-27-675Z.yml  page-2026-04-01T12-27-19-243Z.yml  page-2026-04-01T12-27-42-827Z.yml  page-2026-04-01T12-28-16-080Z.yml  page-2026-04-01T18-25-56-279Z.yml  page-2026-04-01T18-26-49-584Z.yml  page-2026-04-01T18-27-41-002Z.yml  page-2026-04-01T18-28-03-306Z.yml  page-2026-04-01T18-28-25-992Z.yml  page-2026-04-01T18-35-07-618Z.yml  page-2026-04-01T18-35-34-846Z.yml  page-2026-04-01T18-36-15-782Z.yml  (+37 more)
crates/psflow-wasm/: Cargo.toml
crates/psflow-wasm/src/: lib.rs
debugger/: demo.mmd  dungeon-trace.json  index.html  package-lock.json  package.json  sample-trace.json  sample.mmd  tsconfig.json  vite.config.ts
debugger/src/: editor.ts  graph.ts  inspector.ts  live.test.ts  live.ts  main.ts  playback.ts  state.test.ts  state.ts  style.css  timeline.ts  wasm.ts
docs/: composio-triggers-sdk-reference.md  composition-handlers-reference.md  host-integration-quickstart.md  mermaid-annotation-reference.md  writing-flow-mmd.md
ergon/: version.json  workflow-log.md
ergon/active-documents/: 20260328-082824-process-control-framework-tasks.md  20260401-084516-graph-visualization-tasks.md  20260423-165256-polling-compose-first-findings.md  20260424-091430-psflow-network-slice-followups.md  20260530-111310-web-api-wrapper-spec.md  20260530-132304-Web-API-Wrapper-Spec.md  20260601-091344-composio-psflow-integration-design.md  20260602-100350-Composition-Handlers-Followups.md  ROOT-HANDOVER.md
ergon/archived-ignore/: 20260423-084034-psflow-network-and-auth-update.md  20260423-084729-psflow-auth-layer-design.md
ergon/master-plan/: architecture.md  charter.md  decisions.md  ergon-project.json  journal.md  plan.md  primer.md  terminology.md
ergon/project-data/: architecture.md  code-manifest.md  ergon-project.json  project-structure.md  project-terminology.md
ergon/reference/: README.md  argus-brief.md  coherence-manifest.json  coherence-manifest.schema.json  coherence-map.md  debugging-background-processes.md
examples/: composio_cli_execute.mmd  composio_tool_execute.mmd  dungeon_generator.mmd  mesh_generator.mmd  midi_generator.mmd  order_processing.mmd  poll_until_composed.mmd  pty_approve.rs  pty_capture.rs  pty_notify.rs  pty_spike.rs  pty_transcript.rs  texture_generator.mmd  weather_advisor.mmd
graphs/: boom.mmd  claude-ask.mmd  claude-demo.mmd  config.example.json  find_more.mmd  llm-ctx.mmd  llm-test.mmd  loop-demo.mmd  map-demo.mmd  on-event.mmd  on-failure.mmd  sheet-summary.mmd  sheets-search.mmd  sheets-top.mmd  square_item.mmd  state-test.mmd
scripts/: trigger_create.mjs  triggers_listen.mjs
services/freepik/: README.md  check_status.mmd  generate.mmd  history.mmd  list_models.mmd
services/magnific/: README.md  generate.mmd  history.mmd  list_models.mmd
src/: debug_server.rs  error.rs  lib.rs  main.rs  registry.rs  template.rs
src/adapter/: anthropic_api.rs  claude_cli.rs  claude_terminal.rs  conversation.rs  mock.rs  mod.rs  openai_compat.rs  registry.rs
src/auth/: apply_ctx.rs  decl.rs  error.rs  mod.rs  registry.rs  resolver.rs  secret.rs  state.rs  strategy.rs
src/blackboard/: helpers.rs  mod.rs
src/execute/: blackboard.rs  concurrency.rs  context.rs  control.rs  event.rs  event_bus.rs  event_driven.rs  lifecycle.rs  loop_controller.rs  mod.rs  reactive.rs  retry.rs  snapshot.rs  stepped.rs  topological.rs  trace.rs  validation.rs
src/graph/: auth_decl.rs  edge.rs  metadata.rs  mod.rs  node.rs  port.rs  step_compiler.rs  types.rs  validation.rs
src/handlers/: accumulator.rs  claude_workflow.rs  (+19 more)
tests/: auth.rs  body_sink.rs  cli.rs  poll_until.rs  validate_graph.rs  validation.rs  websocket.rs
(+33 files in other folders)
