[package]
name = "psflow"
version = "0.1.0"
edition = "2021"
description = "Domain-agnostic process flow control and execution framework"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
glob = "0.3"
petgraph = "0.6"
reqwest = { version = "0.12", features = ["json"] }
rhai = { version = "1", features = ["sync", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
