[workspace]
members = [".", "crates/psflow-wasm"]

[[bin]]
name = "psflow"
required-features = ["runtime"]

[package]
name = "psflow"
version = "0.1.0"
edition = "2021"
description = "Domain-agnostic process flow control and execution framework"

[features]
default = ["runtime"]
runtime = ["dep:clap", "dep:futures", "dep:glob", "dep:reqwest", "dep:rhai", "dep:tokio", "dep:tokio-util", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"], optional = true }
futures = { version = "0.3.32", optional = true }
glob = { version = "0.3", optional = true }
petgraph = "0.6"
reqwest = { version = "0.12", features = ["json"], optional = true }
rhai = { version = "1", features = ["sync", "serde"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7.18", features = ["rt"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tempfile = "3"
