[package]
name = "psflow-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for psflow Mermaid parser and execution trace types"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
psflow = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsify-next = { version = "0.5", features = ["js"] }
wasm-bindgen = "0.2"
